--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>RNR by HTML5 UP</title>
+		<title>BIG J ROOFING</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>RNR<br />
-						TIRE SHOP</h1>
-						<p>Your Trusted Tire Solution! <a href="https://www.facebook.com/profile.php?id=61556433543372">@RNR TIRE SHOP</a>  </p>
+						<h1>BIG J<br />
+						ROOFING</h1>
+						<p>Your Trusted Home solution! <a href="https://www.facebook.com/BigJsteelroof">@BIGJ ROOFING</a>  </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">RNR TIRE SHOP</a>
+						<a href="index.html" class="logo">BIGJ ROOFING</a>
 					</header>
 
 				<!-- Nav -->
@@ -56,9 +56,9 @@
 									<span class="date">April 25, 2023</span>
 									<h2><a href="#">The beginning of the<br />
 									best tire solution</a></h2>
-									<p>We start in cavite in imus malagasang and so on and so on and so on and so on and so on and so on and so on and so on</p>
+									<p>SAMPLE PICTURES</p>
 								</header>
-								<a href="#" class="image main"><img src="cover photo.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="product.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
@@ -69,11 +69,11 @@
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Ceiling project before<br />
+										</a></h2> 
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="ceiling/476849156_608426495274151_3294617716340093554_n.jpg" alt="" /></a>
+									<p>CEILING PROJECT IN NOVALICHES.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -81,11 +81,11 @@
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Ceiling project after<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="ceiling/476645277_608426445274156_2228116486049521958_n.jpg" alt="" /></a>
+									<p>HAHAHA INAMO BUBOY</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
